[tool.poetry]
name = "graphsignal-debug"
version = "0.1.0"
description = "Graphsignal CLI for debug context and API key management"
authors = ["Graphsignal, Inc. <devops@graphsignal.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "graphsignal_debug", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<4"
click = "*"
pyyaml = "*"
requests = "*"

[tool.poetry.scripts]
graphsignal-debug = "graphsignal_debug.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
