[tool.poetry]
name = "graphsignal-context"
version = "0.1.2"
description = "Graphsignal debug client for AI agents"
authors = ["Graphsignal, Inc. <devops@graphsignal.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "graphsignal_context", from = "src" },
    { include = "tools" },
]

[tool.poetry.dependencies]
python = ">=3.9,<4"
click = "*"
pyyaml = "*"
requests = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.poetry.scripts]
graphsignal-context = "graphsignal_context.cli:main"
test = "tools.run_tests:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
